--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,56 +1,16 @@
-body {
-
-}
-
 .videoContainer {
-  position: fixed;
-  height: 1000px;
-  width: 75%;
-  background-color: black;
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  flex-direction: column;
-  flex-flow: row wrap;
-  justify-content: space-around;
+    width: 750px; /* pick whatever width you want */
+}
+.container .outer {
+    width: 100%;
+    padding-top: 75%; /* defines aspect ratio */
+    position: relative;
 }
 
-.tools {
-  height: 100%;
-  width: 25%;
-  background-color: LightGrey;
-}
-
-.transcriptContainer {
-
-}
-
-.localVideo {
-
-}
-
-
-
-.video {
-  background: tomato;
-  padding: 5px;
-  width: 100%;
-  padding-bottom: 75%;
-  margin-top: 10px;
-  line-height: 150px;
-  color: white;
-  font-weight: bold;
-  font-size: 3em;
-  text-align: center;
-}
-
-
-
-.transcript {
-
+.container .outer .inner {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
