display local stream in small div instead of full-size div like incoming videos

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -18,6 +18,13 @@ body {
   flex: 1;
 }
 
-video {
+.peerVideo {
   display: inline-flex;
+}
+
+#localMediaContainer {
+  position: fixed;
+  bottom: 0;
+  background-color: black;
+  width: 25%;
 }
