--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -13,6 +13,11 @@ body {
   flex: 3;
 }
 
+#controls {
+  padding-top: 5px;
+  padding-left: 5px;
+}
+
 #tools {
   background-color: LightBlue;
   flex: 1;
@@ -23,8 +28,10 @@ body {
 }
 
 #localMediaContainer {
+  background-color: black;
+  /*anchor localMedia to bottom of screen*/
   position: fixed;
   bottom: 0;
-  background-color: black;
+  /*bound width of localMedia*/
   width: 25%;
 }
