--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -23,8 +23,6 @@ body {
 
 #controls {
   color: #95a5a6;
-  padding-top: 10px;
-  padding-left: 10px;
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: 300;
 }
@@ -44,10 +42,13 @@ input {
   height: 75vh;
 }
 
+#download {
+  margin-left: 4px;
+}
+
 #alerts {
-  margin-left: -9%;
+  margin-left: -6%;
   margin-top: 10px;
-  height: 10px;
 }
 
 .peerVideoCont {
