local media resize and custom peer names

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -68,7 +68,7 @@ input {
 }
 
 #localMediaContainer {
-  background-color: black;
+  background-color: #21252B;
   /*anchor localMedia to bottom of screen*/
   position: fixed;
   bottom: 0;
